# practice_tasks

./: .gitignore  main.rs
async_download_state_machine_using_threads/: Cargo.toml
async_download_state_machine_using_threads/src/: main.rs
chat_app_tcp/client/src/: main.rs
chat_app_tcp/server/src/: main.rs
chat_app_udp/client/src/: main.rs
chat_app_udp/server/src/: main.rs
multi_miners/: Cargo.toml
multi_miners/src/: main.rs
simple_client/: Cargo.toml  btc.json  output.txt
simple_client/lib/: Cargo.toml
simple_client/lib/src/: lib.rs
simple_client/src/: main.rs
simple_pow/: Cargo.toml
simple_pow/src/: main.rs
state_machine_example/: Cargo.toml
state_machine_example/src/: main.rs
