[package]
name = "simple_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tokio = { version = "1", features = ["full"] }
rsa = "0.4"
rand = "0.8.5"
lib = {path = "../simple_client/lib"}