[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = "0.21.0"
futures-util = "0.3.30"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
async-std = "1.12"
native-tls = "0.2.8"
rsa = "0.4"
rust-crypto = "0.2"
rand = "0.8.5"